Add CPM2, allow configuring net params in caffe evaluator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ option(BUILD_IMAGE_EVALUATORS "" ON)
 option(BUILD_IMAGE_PROCESSING_EVALUATORS "" ON)
 option(BUILD_CAFFE_EVALUATORS "" OFF)
 option(BUILD_CAFFE_INPUT_EVALUATORS "" OFF)
+option(BUILD_CPM2_EVALUATORS "" OFF)
 option(BUILD_MOVIE_ANALYSIS_EVALUATORS "" OFF)
 option(BUILD_TRACKER_EVALUATORS "" OFF)
 option(BUILD_UTIL_EVALUATORS "" OFF)
