Add more sampling functions, update more evaluators

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ project(Scanner)
 
 ###### Config options #####
 option(BUILD_VIDEO_EVALUATORS "" ON)
-option(BUILD_IMAGE_EVALUATORS "" ON)
+option(BUILD_IMAGE_EVALUATORS "" OFF)
 option(BUILD_IMAGE_PROCESSING_EVALUATORS "" ON)
 option(BUILD_CAFFE_EVALUATORS "" OFF)
 option(BUILD_CAFFE_INPUT_EVALUATORS "" OFF)
