Script for executing standalone tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -159,7 +159,7 @@ if (BUILD_MOVIE_ANALYSIS_EVALUATORS)
   if (OPENCV_MAJOR_VERSION EQUAL 3)
       list(APPEND OPENCV_DESIRED_COMPONENTS core highgui imgproc objdetect video)
       if (CUDA_FOUND)
-          list(APPEND OPENCV_DESIRED_COMPONENTS cudaoptflow)
+          list(APPEND OPENCV_DESIRED_COMPONENTS cudaoptflow cudacodec)
       endif()
   else()
       list(APPEND OPENCV_DESIRED_COMPONENTS core highgui imgproc objdetect video)
