Add OCV and kernel SOL tests

--- a/comparison/CMakeLists.txt
+++ b/comparison/CMakeLists.txt
@@ -1,3 +1,5 @@
 add_subdirectory(standalone)
 add_subdirectory(peak)
+add_subdirectory(ocv_decode)
+add_subdirectory(kernel_sol)
 #add_subdirectory(caffe)
