--- a/comparison/CMakeLists.txt
+++ b/comparison/CMakeLists.txt
@@ -2,4 +2,5 @@ add_subdirectory(standalone)
 add_subdirectory(peak)
 add_subdirectory(ocv_decode)
 add_subdirectory(kernel_sol)
+add_subdirectory(readwrite)
 #add_subdirectory(caffe)
