--- a/scanner/pipelines/CMakeLists.txt
+++ b/scanner/pipelines/CMakeLists.txt
@@ -25,6 +25,14 @@ if (BUILD_VIDEO_EVALUATORS AND
     BUILD_CAFFE_INPUT_EVALUATORS AND
     BUILD_UTIL_EVALUATORS)
   list(APPEND SOURCE_FILES
+    facenet_pipeline.cpp)
+endif()
+
+if (BUILD_VIDEO_EVALUATORS AND
+    BUILD_CAFFE_EVALUATORS AND
+    BUILD_CAFFE_INPUT_EVALUATORS AND
+    BUILD_UTIL_EVALUATORS)
+  list(APPEND SOURCE_FILES
     find_person_pipeline.cpp
     find_pose_pipeline.cpp)
   if (BUILD_CPM2_EVALUATORS)
