Create api directory for user facing interface
Start to move ingest and run into api
Add task set for replacing pipeline desc
Add evalutor and kernel w/ registry for new execution framework
Change metadata.proto to have a table concept

--- a/features/googlenet.toml
+++ b/features/googlenet.toml
@@ -3,7 +3,7 @@
     weights = "features/googlenet/bvlc_googlenet.caffemodel"
     source = "https://github.com/BVLC/caffe/tree/master/models/bvlc_googlenet"
     input_layers = ["data"]
-    output_layers = ["pool5/7x7_s1"]
+    output_layers = ["loss3/classifier"]
     input_width = 224
     input_height = 224
     normalize = true
