--- a/comparison/CMakeLists.txt
+++ b/comparison/CMakeLists.txt
@@ -3,4 +3,5 @@ add_subdirectory(peak)
 add_subdirectory(ocv_decode)
 add_subdirectory(kernel_sol)
 add_subdirectory(readwrite)
+add_subdirectory(equal)
 #add_subdirectory(caffe)
