--- a/scanner/CMakeLists.txt
+++ b/scanner/CMakeLists.txt
@@ -3,6 +3,7 @@ add_subdirectory(api)
 add_subdirectory(engine)
 add_subdirectory(video)
 add_subdirectory(evaluators)
+#add_subdirectory(eval)
 add_subdirectory(server)
 add_subdirectory(parsers)
 add_subdirectory(pipelines)
