Compiling, but not linking

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -347,12 +347,12 @@ add_executable(scanner_server
   scanner/main.cpp
   $<TARGET_OBJECTS:api>
   $<TARGET_OBJECTS:engine>
-  $<TARGET_OBJECTS:video>
+  #$<TARGET_OBJECTS:video>
   #$<TARGET_OBJECTS:eval>
-  $<TARGET_OBJECTS:evaluators>
-  $<TARGET_OBJECTS:parsers>
-  $<TARGET_OBJECTS:server>
-  $<TARGET_OBJECTS:pipelines>
+  #$<TARGET_OBJECTS:evaluators>
+  #$<TARGET_OBJECTS:parsers>
+  #$<TARGET_OBJECTS:server>
+  #$<TARGET_OBJECTS:pipelines>
   $<TARGET_OBJECTS:util>
   ${PROTO_SRCS}
   ${GRPC_PROTO_SRCS}
