--- a/scanner/CMakeLists.txt
+++ b/scanner/CMakeLists.txt
@@ -2,7 +2,7 @@ set(SCANNER_OBJS)
 add_subdirectory(api)
 add_subdirectory(engine)
 add_subdirectory(video)
-add_subdirectory(evaluators)
+#add_subdirectory(evaluators)
 #add_subdirectory(eval)
 add_subdirectory(server)
 add_subdirectory(parsers)
