--- a/scanner/CMakeLists.txt
+++ b/scanner/CMakeLists.txt
@@ -2,10 +2,6 @@ set(SCANNER_OBJS)
 add_subdirectory(api)
 add_subdirectory(engine)
 add_subdirectory(video)
-#add_subdirectory(evaluators)
-#add_subdirectory(eval)
-add_subdirectory(server)
-add_subdirectory(parsers)
-add_subdirectory(pipelines)
+add_subdirectory(kernels)
 add_subdirectory(util)
 set(SCANNER_OBJS ${SCANNER_OBJS} PARENT_SCOPE)
