More work on simple example

--- a/scanner/api/CMakeLists.txt
+++ b/scanner/api/CMakeLists.txt
@@ -2,7 +2,8 @@ set(SOURCE_FILES
   kernel.cpp
   evaluator.cpp
   run.cpp
-  ingest.cpp)
+  ingest.cpp
+  task_set.cpp)
 
 add_library(api OBJECT
   ${SOURCE_FILES})
