Added histogram kernel

--- a/scanner/kernels/CMakeLists.txt
+++ b/scanner/kernels/CMakeLists.txt
@@ -1,5 +1,11 @@
 set(SOURCE_FILES
   blur_kernel.cpp)
 
+if (BUILD_MOVIE_ANALYSIS_EVALUATORS)
+  list(APPEND SOURCE_FILES
+    histogram_kernel.cpp)
+endif()
+
+
 add_library(kernels OBJECT
   ${SOURCE_FILES})
