--- a/scanner/api/CMakeLists.txt
+++ b/scanner/api/CMakeLists.txt
@@ -2,7 +2,8 @@ set(SOURCE_FILES
   kernel.cpp
   evaluator.cpp
   commands.cpp
-  task_set.cpp)
+  task_set.cpp
+  user_function.cpp)
 
 add_library(api OBJECT
   ${SOURCE_FILES})
