Added worker parameters

--- a/.scanner.example.toml
+++ b/.scanner.example.toml
@@ -1,8 +1,20 @@
 scanner_path = "/opt/scanner"
 
+[memory_pool]
+    [cpu]
+        use_pool = false
+        free_space = "12G"
+    [gpu]
+        use_pool = false
+        free_space = "4G"
+
 [storage]
     type = "posix"
     db_path = "/opt/scanner-db"
 
 [job]
     work_item_size = 96
+    io_item_size = 512
+
+[network]
+    master = "localhost:5001"
