--- a/scanner/video/CMakeLists.txt
+++ b/scanner/video/CMakeLists.txt
@@ -19,3 +19,13 @@ list(APPEND SOURCE_FILES
 
 add_library(video OBJECT
   ${SOURCE_FILES})
+
+add_executable(DecoderAutomataTest decoder_automata_test.cpp
+  $<TARGET_OBJECTS:video>
+  $<TARGET_OBJECTS:util>
+  $<TARGET_OBJECTS:engine>
+  ${PROTO_SRCS}
+  ${GRPC_PROTO_SRCS})
+target_link_libraries(DecoderAutomataTest ${GTEST_LIBRARIES} ${GTEST_LIB_MAIN}
+  ${SCANNER_LIBRARIES})
+add_test(DecoderAutomataTest DecoderAutomataTest)
